@@ -37,6 +37,8 @@ v8.0.0:
    (when the lap contains just a break without any activity)
  - All XML-based parsers (GPX, TCX, Polar): fixed error when opening files with
    spaces or special characters in the filename
+ - GPX parser (TopoGrafixGpxParser): bugfix for issue #260
+   - support for GPX files where timestamps contain timezone / offset info
 
 v7.9.1:
  Project changes:
